# todo_app

./: .gitmodules  pyproject.toml
todo_app/: database.py  main.py  todosapp.db
