[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Vadim Surin <7uperior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.108.0"}
bcrypt = "^4.1.2"
cryptography = "^41.0.7"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.24"
uvicorn = "^0.25.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"